ExtensionModelApi create. da risistemare e aggiungere i filtri ma attualmente funzionanti sulle mappe dirette

--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@model KCASM_AppWeb.Models.ForApi.Patient;
 @{
     ViewData["Title"] = "Patient";
 }
 
 <h2>Patient</h2>
+
+<p> @Model.Name  @Model.Age</p>
 
