Creato Model ForView e corrette alcune funzioni in ExtensionModelApi

--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
@@ -7,7 +7,7 @@
 
     //@model KCASM_AppWeb.Models.ForApi.PatientInitial;
 
-    @model List<KCASM_AppWeb.Models.ForApi.Medic>;
+   //@model List<KCASM_AppWeb.Models.ForApi.Medic>;
 
     //@model KCASM_AppWeb.Models.ForApi.MessageList;
 
@@ -33,7 +33,7 @@
 
     //<p> PatientInitial --> start date: @Model.Pregnancy_start_date  weight: @Model.Weight  height: @Model.Height  bmi: @Model.Bmi  twin: @Model.Twin</p>
 
-    <p> medics --> @Model</p>
+    //<p> medics --> @Model</p>
 
     //<p> MessageList --> received: @Model.Message_received  sent: @Model.Message_sent</p>
 
