--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Patient";
 }
 
+@model KCASM_AppWeb.Models.ForView.Patient
+
 <h2>Patient</h2>
 
 <center>
@@ -10,254 +12,101 @@
     <div id="sensor" style="margin-top: 1.5em; margin-bottom: 1.5em;"></div>
 </center>
 
-<p style="font: 30px sans-serif; margin-top: 1.5em;">Elenco di tutte le attività</p>
-<div id="task"></div>
+    <p style="font: 30px sans-serif; margin-top: 1.5em;">Elenco di tutti i medici</p>
+    <div id="medic"></div>
+        <script>
+                $(document).ready(function () {
+                    $("#medic").kendoGrid({
+                        dataSource: {
+                            data: @Model.Medics,
+                            schema: {
+                                model: {
+                                    fields: {
+                                        name: { type: "string" },
+                                        surname: { type: "string" },
+                                        specialization: { type: "string" },
+                                    }
+                                }
+                            },
+                            pageSize: 10
+                        },
+                        height: "30em",
+                        groupable: false,
+                        sortable: true,
+                        pageable: {
+                            refresh: false,
+                            pageSizes: true,
+                            buttonCount: 5
+                        },
+                        columns: [{
+                            field: "name",
+                            title: "Nome"
+                        }, {
+                            field: "surname",
+                            title: "Cognome"
+                        }, {
+                            field: "specialization",
+                            title: "Specializzazione",
+                        }]
+                    });
+                });
+        </script>
 
-<script>
-    function createChart() {
+    <div id="editable_patient_data">
+            <fieldset style="margin-top: 2em">
+                <legend>Profilo</legend>
+                <form id="form_settings" method="post">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>Nome</label>
+                                <input class="form-control" type="text" name="username" value="@Model.Name" placeholder="@Model.Name" required />
+                                <label>Cognome</label>
+                                <input class="form-control" type="text" name="name" value="@Model.Surname" placeholder="@Model.Surname" required />
+                                <label>Numero di telefono</label>
+                                <input class="form-control" type="text" name="phone" value="@Model.Phone" placeholder="@Model.Phone" required />
+                                <label>Indirizzo email</label>
+                                <input class="form-control" type="email" name="email" value="@Model.Email" placeholder="@Model.Email" required />
+                                <label>Indirizzo di casa</label>
+                                <input class="form-control" type="text" name="home_address" value="@Model.Address_home" placeholder="@Model.Address_home" required />
+                                <label>Indirizzo dell'ospedale</label>
+                                <input class="form-control" type="text" name="hospital_address" value="@Model.Address_hospital" placeholder="@Model.Address_hospital" required />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label>Età</label>
+                                <input class="form-control" type="number" name="age" value="@Model.Age" placeholder="@Model.Age" required min="18" max="60" />
+                            </div>
+                            <div class="col-md-2">
+                                <label>Altezza</label>
+                                <input class="form-control" type="number" name="height" value="@Model.Height" placeholder="@Model.Height" required min="120" max="250" />
+                            </div>
+                            <div>
+                                <label>Sistema di notifiche</label>
+                                Email <input type="checkbox" name="notify_email" value="@Model.Email_notify" />
+                                SMS <input type="checkbox" name="notify_SMS" value="@Model.Email_notify" />
+                            </div>
+                            <div>
+                                <label>Parto gemellare</label>
+                                <input class="view-mode" type="checkbox" name="twin" value="@Model.Twin"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-1">
+                                <input class="btn btn-primary" type="submit" value="Aggiorna dati" />
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <p class="error-message">@ViewData["Message"]</p>
+            </fieldset>
+    </div>
 
-        $("#fitbit").kendoChart({
-            title: {
-                text: "Fitbit",
-                font: "30px sans-serif",
-                color: "black"
-            },
-            legend: {
-                position: "bottom"
-            },
-            series: [{
-                type: "line",
-                style: "smooth",
-                data: [78, 91, 83],
-                name: "Battiti Cardiaci Medi",
-                color: "#cc0000",
-                axis: "heart"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [3325, 6454, 1234],
-                name: "Passi",
-                color: "#00ff00",
-                axis: "steps"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [1, 5, 3],
-                name: "Distanza (Km)",
-                color: "#0000ff",
-                axis: "distance"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [3, 4, 5],
-                name: "Elevazione (altezza Km)",
-                color: "#808080",
-                axis: "elevation"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [1, 2, 3],
-                name: "Piani",
-                color: "#651a1a",
-                axis: "floors"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [1000, 1500, 2000],
-                name: "Calorie (Kcal)",
-                color: "#ffc14d",
-                axis: "calories"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [200, 150, 100],
-                name: "Minuti di Sonno",
-                color: "#e6e600",
-                axis: "asleep"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [100, 150, 200],
-                name: "Minuti Svegli",
-                color: "#ff00ff",
-                axis: "awake"
-            }],
-            valueAxes: [{
-                name: "heart",
-                color: "#cc0000",
-                min: 40,
-                max: 250
-            }, {
-                name: "steps",
-                color: "#00ff00",
-                min: 0,
-                max: 6000
-            }, {
-                name: "distance",
-                color: "#0000ff",
-                min: 0,
-                max: 50
-            }, {
-                name: "elevation",
-                color: "#808080",
-                min: 0,
-                max: 1000
-            }, {
-                name: "floors",
-                color: "#651a1a",
-                min: 0,
-                max: 25
-            }, {
-                name: "calories",
-                color: "#ffc14d",
-                min: 0,
-                max: 5000
-            }, {
-                name: "asleep",
-                color: "#e6e600",
-                min: 0,
-                max: 600
-            }, {
-                name: "awake",
-                color: "#ff00ff",
-                min: 0,
-                max: 1200
-            }],
-            categoryAxis: {
-                categories: ["2018-11-14", "2018-11-15", "2018-11-16"],
-                axisCrossingValues: [0, 3, 0, 0, 0, 3, 3, 3],
-                justified: true,
-                labels: { rotation: "auto" }
-            },
-            tooltip: {
-                visible: true,
-                format: "{0}",
-                template: "#= category #: #= value #"
-            }
-        });
-    }
-
-    $(document).ready(createChart);
-    $(document).bind("kendo:skinChange", createChart);
-</script>
-
-<script>
-    function createChart() {
-
-        $("#hue").kendoChart({
-            title: {
-                text: "Cromoterapia",
-                font: "30px sans-serif",
-                color: "black"
-            },
-            legend: {
-                position: "bottom"
-            },
-            series: [{
-                type: "column",
-                data: [1, 0, 6],
-                name: "Cromoterapie Soft",
-                color: "#00ff00",
-                axis: "cromosoft"
-            }, {
-                type: "column",
-                data: [10, 5, 7],
-                name: "Cromoterapie Hard",
-                color: "#0066ff",
-                axis: "cromohard"
-            }],
-            valueAxes: [{
-                name: "cromosoft",
-                color: "#00ff00",
-                min: 0,
-                max: 30
-            }, {
-                name: "cromohard",
-                color: "#0066ff",
-                min: 0,
-                max: 30
-            }],
-            categoryAxis: {
-                categories: ["2018-11-14", "2018-11-15", "2018-11-16"],
-                axisCrossingValues: [0, 3],
-                justified: true,
-                labels: { rotation: "auto" }
-            },
-            tooltip: {
-                visible: true,
-                format: "{0}",
-                template: "#= category #: #= value #"
-            }
-        });
-    }
-
-    $(document).ready(createChart);
-    $(document).bind("kendo:skinChange", createChart);
-</script>
-
-<script>
-    function createChart() {
-        $("#sensor").kendoChart({
-            title: {
-                text: "Sensore",
-                font: "30px sans-serif",
-                color: "black"
-            },
-            legend: {
-                position: "bottom"
-            },
-            series: [{
-                type: "line",
-                style: "smooth",
-                data: [25, 27, 19],
-                name: "Temperature [C°]",
-                color: "#ff1c1c",
-                axis: "temp"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [11, 33, 27],
-                name: "Umidità [%]",
-                color: "#ffae00",
-                axis: "hum"
-            }, {
-                type: "line",
-                style: "smooth",
-                data: [142, 435, 795],
-                name: "Luminosita [lux]",
-                color: "#73c100",
-                axis: "lum"
-            }],
-            valueAxes: [{
-                name: "temp",
-                color: "#ff1c1c",
-                min: 0,
-                max: 50
-            }, {
-                name: "hum",
-                color: "#ffae00",
-                min: 0,
-                max: 100
-            }, {
-                name: "lum",
-                color: "#73c100",
-                min: 0,
-                max: 1000
-            }],
-            categoryAxis: {
-                categories: ["2018-11-14", "2018-11-15", "2018-11-16"],
-                axisCrossingValues: [0, 0, 3],
-                justified: true,
-                labels: { rotation: "auto" }
-            },
-            tooltip: {
-                visible: true,
-                format: "{0}",
-                template: "#= category #: #= value #"
-            }
-        });
-    }
-
-    $(document).ready(createChart);
-    $(document).bind("kendo:skinChange", createChart);
-</script>
+    <div id="not_editable_patient_data">
+        <p>Data d'inizio gravidanza: @Model.Pregnancy_start_date</p>
+        <p>Peso iniziale: @Model.Weight</p>
+        <p>Indice di massa corporea (BMI): @Model.Bmi</p>
+    </div>
