--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </form>
-                <p class="error-message">@ViewData["Message"]</p>
+                <p class="error-message"></p>
             </fieldset>
     </div>
 
