--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/Navbar.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/Navbar.cshtml
@@ -38,6 +38,7 @@
                         <li><a asp-controller="Weight" asp-action="Weight">Pesi</a></li>
                         <li><a asp-controller="Home" asp-action="Index" style="border-left: 2px solid grey;">Home</a></li>
                         <li><a asp-controller="Medic" asp-action="Medic">Medico</a></li>
+                        <li><a asp-controller="Message" asp-action="Message">Messaggi</a></li>
                         <li><a asp-controller="Home" asp-action="Logout">Esci</a></li>
                     }
                     else if (ViewData["Session"].Equals("Admin"))
